# enum-spanner-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benchmarks/: DNA_arbitrary_distance.json  DNA_growing_distance.json  DNA_growing_fragments.json  DNA_growing_length.json  README.md  benchmarks.json  blog.json  download_blog_data.sh  download_dna.sh  run_benchmarks.sh
src/: automaton.json  benchmark.rs  main.rs  matrix.rs  progress.rs
src/automaton/: mod.rs
src/mapping/: indexed_dag.rs  indexed_dag.rs.orig  jump.rs  levelset.rs  mod.rs  naive.rs  sparse_levelset.rs  tests.rs
src/naive/: mod.rs  naive.rs  naive_cubic.rs  naive_quadratic.rs
src/regex/: glushkov.rs  mod.rs  naive.rs  parse.rs
