[package]
name = "enum-spanner-rs"
version = "0.1.0"
authors = ["Rémi Dupré <remim.dupre@gmail.com>"]
edition = "2018"

[dependencies]
memchr = "2.3.*"
clap = "2.33"
regex = "1"
regex-syntax = "0.6"
bit-vec = "0.6.2"
bit-set = "0.5.2"
streaming-stats = "0.2.2"
serde_json = "1.0"
serde = { version = "1.0", features= ["derive"]}

[profile.dev]
opt-level = 3
