[package]
name = "enum-spanner-rs"
version = "0.1.0"
authors = ["Rémi Dupré <remim.dupre@gmail.com>"]
edition = "2018"

[dependencies]
memchr = "=2.3.4"
clap = "=2.33.3"
regex = "=1.4.6"
regex-syntax = "=0.6.25"
bit-vec = "=0.6.3"
bit-set = "=0.5.2"
streaming-stats = "=0.2.3"
serde_json = "=1.0.64"
serde = { version = "=1.0.125", features= ["derive"]}

[profile.dev]
opt-level = 3
