[package]
name = "enum-spanner-rs"
version = "0.1.0"
authors = ["Rémi Dupré <remim.dupre@gmail.com>"]
edition = "2018"

[dependencies]
memchr = "=2.3.4"
clap = "=2.33.3"
regex = "=1.4.6"
regex-syntax = "=0.6.25"
bit-vec = "=0.6.3"
bit-set = "=0.5.2"
streaming-stats = "=0.2.3"
serde_json = "=1.0.64"
num-traits = "=0.2.14"
itoa = "=0.4.7"
ryu = "=1.0.5"
bitflags = "=1.2.1"
textwrap = "=0.11.0"
ansi_term = "=0.11.0"
strsim = "=0.8.0"
unicode-width = "=0.1.8"
atty = "=0.2.14"
vec_map = "=0.8.2"
aho-corasick = "=0.7.15"
autocfg = "=1.0.1"
libc = "=0.2.99"
syn = "=1.0.74"
proc-macro2 = "=1.0.28"
quote = "=1.0.9"
unicode-xid = "=0.2.2"
serde = { version = "=1.0.125", features= ["derive"]}

[profile.dev]
opt-level = 3
